# Photonic-Reservoir-Enhanced-DeepChronos

./: README.md
photonic_rc_chronos/: README.md  pyproject.toml
photonic_rc_chronos/.github/workflows/: ci.yml
photonic_rc_chronos/docs/: architecture.md
photonic_rc_chronos/photonic_rc/ml_layers/: chronos_adapter.py  reservoir_layer.py
photonic_rc_chronos/photonic_rc/physics/: ikeda.py  mesh.py
photonic_rc_chronos/photonic_rc/utils/: energy.py
photonic_rc_chronos/tests/: test_ikeda.py
